Fix menu-bar search item, message tooltip spacing

--- a/scss/utils/_colours.scss
+++ b/scss/utils/_colours.scss
@@ -24,6 +24,8 @@ $color-red: #ff5555;
 
 // Text colors
 $color-text: $color-white;
+$color-text--soft: $color-white--darker;
+$color-text--muted: $color-muted;
 $color-text--dark: $color-background-tertiary;
 
 // Set default Discord color variables
